--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>R Tech Software Solutions</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <link rel = "icon" href="" type=".jpg/.png/.ico"/>
+    <link rel = "icon" href="logo.jpeg" type=".jpg/.png/.ico/.jpeg"/>
     <script src="index.js" defer></script>
     <script src="https://kit.fontawesome.com/efc246ce45.js" crossorigin="anonymous"></script>
 </head>
@@ -353,4 +353,5 @@ question patterns, and master exam strategies for VIT students.</p>
         </footer>
     
 </body>
+
 </html>
